<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yudaleh</string>
    <string name="i_owe_tab_title">I owe :(</string>
    <string name="owe_me_tab_title">Owe me :)</string>
    <string name="dashboard_tab_title">Dashboard</string>
    <string name="about">About</string>
    <string name="about_body"><![CDATA[
        Yudaleh - debt managing application.<br/>
        Created by:<br/>
        Eilon Karty<br/>
        and<br/>
        Michael Zolotarevsky<br/>
    ]]></string>

    <string name="no_title_error">Title is required</string>
    <string name="no_owner_error">Owner\'s name is required</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>(Not money)</item>
        <item>NIS</item>
        <item>$</item>
        <item>EURO</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="contact_actions_dialog_title_action">Debt created</string>
    <string name="contact_actions_dialog_title_new_debt">Debt created</string>
    <string name="contact_actions_dialog_title_modified_debt">Details changed</string>
    <string-array name="contact_actions_array_logged_in">
        <item>Call</item>
        <item>SMS</item>
        <item>Chat</item>
    </string-array>

    <string-array name="contact_actions_array_logged_out">
        <item>Call</item>
        <item>SMS</item>
    </string-array>

    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading…</string>
    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_forgot_password_button_label"><u>Forgot password</u></string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign up</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_twitter_login_button_label">Log in with Twitter</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_twitter_login_failed_toast">Twitter login failed</string>

    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>

    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>

    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">"Parse username/password login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_failed">"Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_failed">"Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed">"Updating user object after Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed">"Updating user object after Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_parse_signup_failed">"Parse signup failed, exception: "</string>
    <string name="com_parse_ui_login_warning_password_reset_failed">"Parse password reset failed, exception: "</string>

    <string name="com_parse_ui_login_dispatch_user_logged_in">"User logged in, starting: "</string>
    <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in, starting ParseLoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="confirm_password_prompt">Please confirm your password:</string>
    <string name="error_prefix">"Please "</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="error_name">enter a username</string>
    <string name="error_password">enter a password</string>
    <string name="password_mismatch">enter the same password twice</string>
    <string name="debt_prompt">Enter debt details:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ignore">Ignore</string>
    <string name="add_debt">Add to my debts</string>
    <string name="action_new">New Debt</string>
    <string name="action_remind">Set Reminder</string>
    <string name="action_delete">Delete Debt</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Revert Changes</string>
    <string name="action_sync">Sync</string>
    <string name="action_edit_mode">Edit Debt</string>
    <string name="action_chart_mode">Chart Mode</string>
    <string name="action_list_mode">List Mode</string>
    <string name="action_logout">Log Out</string>
    <string name="action_login">Log In</string>
    <string name="login_title">Please log in or sign up to sync your debts to your account.</string>
    <string name="no_items">No items, click + to start adding debts.</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in">Welcome, %1$s</string>

    <string name="parse_app_id">1wOBsSzT94l7KHNBFfofmIg0VvpAVVO2o9K7GXoF</string>
    <string name="parse_client_key">M6unV2mvfdN7e24AnoJ9GTE67YjWTf0jZI7Ky3LZ</string>

    <string name="debt_title_hint">Title</string>
    <string name="debt_owner_hint">Owner (or find above)</string>
    <string name="debt_phone_hint">Owner\'s phone</string>
    <string name="debt_desc_hint">Notes</string>
    <string name="remind_checkbox_text">Reminder</string>

    <string name="findContact">Search in contacts</string>
    <string name="app_slogan">Manage your debts - easily!</string>
    <string name="remind_button_text">Set reminder</string>

    <string name="message_elipses">Message…</string>
    <string name="push_checkbox_text">Sync debt with owner using push notification</string>

    <string name="dismiss">Dismiss</string>
    <string name="discard">Discard</string>
    <string name="action1_text">Open</string>
    <string name="action2_text_with_phone">Contact owner</string>
    <string name="action2_text_no_phone">(Add phone)</string>
    <string name="action3_text">Reminder</string>

    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>

    <string name="newTag">New!</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>

    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>

    <string name="others">Others</string>

    <string name="debt_icon_desc">debt icon</string>

</resources>