<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="30dp">


        <EditText
            android:id="@+id/debt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_title_hint"
            android:inputType="textCapSentences"
            android:nextFocusDown="@+id/debt_owner"
            android:paddingTop="30dp"
            android:windowSoftInputMode="stateHidden" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/debt_owner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_owner_hint"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/debt_phone"
            android:paddingTop="30dp" />

        <EditText
            android:id="@+id/debt_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_phone_hint"
            android:inputType="phone"
            android:nextFocusDown="@+id/debt_desc"
            android:paddingTop="30dp" />

        <EditText
            android:id="@+id/debt_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_desc_hint"
            android:inputType="textCapSentences"
            android:paddingTop="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

            <CheckBox
                android:id="@+id/remind_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/remind_checkbox_text" />

            <Button
                android:id="@+id/remind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/remind_button_text" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/push_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/push_checkbox_text" />

    </LinearLayout>
</ScrollView>